--- a/first-image.html
+++ b/first-image.html
@@ -19,7 +19,7 @@
 
             <div class="n-box">
                 <img src="/section9a/img/image2replace.jpg" class="img--1" alt="">
-                <div class="first-box">1</div>
+                <div class="first-box">1 I am vera</div>
             </div>
 
             <!-- =========second-image========= -->
@@ -46,19 +46,6 @@
         </div>
 
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
