--- a/first-image.html
+++ b/first-image.html
@@ -19,7 +19,7 @@
 
             <div class="n-box">
                 <img src="/section9a/img/image2replace.jpg" class="img--1" alt="">
-                <div class="first-box">1 I am vera</div>
+                <div class="first-box">1 I'm Robinson</div>
             </div>
 
             <!-- =========second-image========= -->
