--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/section9a/css/first-image.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title> Badge theming </title>
 </head>
 
@@ -18,7 +18,7 @@
             <!-- =========first-image============= -->
 
             <div class="n-box">
-                <img src="/section9a/img/image2replace.jpg" class="img--1" alt="">
+                <img src="/img/image2replace.jpg" class="img--1" alt="">
                 <div class="first-box">1 I'm Robinson</div>
             </div>
 
