--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <!-- =========second-image========= -->
 
             <div class="nn-box">
-                <img src="/section9a/img/image2.jpg" class="img--2" alt="">
+                <img src="/img/image2.jpg" class="img--2" alt="">
                 <div class="second-box">2</div>
             </div>
 
             <!-- ======tthird-image========= -->
 
             <div class="nnn-box">
-                <img src="/section9a/img/girl-covered-face.jpg" class="img--3" alt="">
+                <img src="/img/girl-covered-face.jpg" class="img--3" alt="">
                 <div class="third-box">3</div>
             </div>
 
