--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title> Badge theming </title>
 </head>
 
@@ -18,21 +18,21 @@
             <!-- =========first-image============= -->
 
             <div class="n-box">
-                <img src="/img/image2replace.jpg" class="img--1" alt="">
+                <img src="img/image2replace.jpg" class="img--1" alt="">
                 <div class="first-box">1 I'm Robinson</div>
             </div>
 
             <!-- =========second-image========= -->
 
             <div class="nn-box">
-                <img src="/img/image2.jpg" class="img--2" alt="">
+                <img src="img/image2.jpg" class="img--2" alt="">
                 <div class="second-box">2</div>
             </div>
 
             <!-- ======tthird-image========= -->
 
             <div class="nnn-box">
-                <img src="/img/girl-covered-face.jpg" class="img--3" alt="">
+                <img src="img/girl-covered-face.jpg" class="img--3" alt="">
                 <div class="third-box">3</div>
             </div>
 
